fix(core)!: require exactly one ordering expression for RANGE window bounds
BREAKING CHANGE: a ConsistentPartitionWindow or WindowFunctionInvocation
with a RANGE bound's Preceding or Following side now requires exactly
one, non-CLUSTERED ordering expression. A plan that previously built or
parsed with zero, multiple, or a CLUSTERED ordering expression in that
position now throws IllegalArgumentException.